--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "bootstrap": "^4.3.1",
     "ejs": "^2.6.2",
     "express": "^4.17.1",
-    "nodejs": "^0.0.0"
+    "nodejs": "^0.0.0",
+    "require": "^2.4.20"
   },
   "devDependencies": {},
   "scripts": {
